# sublingo

./: .env.example  .gitignore  README.md  extract_subs.sh  pyproject.toml  requirements.txt
sublingo/: __init__.py  cli.py  main.py
sublingo/core/: batching.py  extractor.py  subtitle_builder.py  subtitle_parser.py
sublingo/prompts/: keep_names_rule.txt  system_prompt.txt  user_prompt.txt
sublingo/providers/: base.py  ollama_provider.py  openai_provider.py  vllm_provider.py
sublingo/services/: language_detection.py  translation_service.py  tvdb_client.py  tvdb_context.py
sublingo/utils/: config.py  file_utils.py  languages.json  languages.py  logger.py  tvdb_languages.json
tests/: test_batching.py  test_providers.py  test_subtitle_parser.py  test_translation_service.py  test_tvdb_context.py
tests/fixtures/: sample.ass  sample.srt  sample.vtt
